test/cases/compile_errors/dereference_anyopaque.zig
export fn foo(ptr: *anyopaque) void {
    _ = ptr.*;
}

// error
//
// :2:12: error: cannot load opaque type 'anyopaque'
